[gd_scene load_steps=4 format=2]

[ext_resource path="res://Snakev2/Scripts/SnakeBodySegment2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/snake_box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="Sprite" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Segment" type="Node2D" parent="."]

[node name="SegmentHitbox" type="Area2D" parent="Segment"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment/SegmentHitbox"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Segment/SegmentHitbox" to="." method="_on_SegmentHitbox_area_entered"]
